--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>Wir arbeiten gerade daran, hier spannende Inhalte für dich bereitzustellen.</p>
     <p>Bitte schau bald wieder vorbei!</p>
     <div class="footer">
-        <p>&copy; 2024 Dein Projektname</p>
+        <p>&copy; 2024 Sonnensegel-Storck.de</p>
     </div>
 </body>
 </html>
